[gd_scene load_steps=8 format=2]

[ext_resource path="res://art/oozle.png" type="Texture" id=1]
[ext_resource path="res://default_theme.tres" type="Theme" id=2]
[ext_resource path="res://fonts/BerlinDemi.tres" type="DynamicFont" id=3]
[ext_resource path="res://art/bg.jpg" type="Texture" id=4]
[ext_resource path="res://fonts/Berlin Sans FB Demi Bold.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://MainMenu.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 53
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = -264.0
margin_top = -24.0
margin_right = 1294.0
margin_bottom = 736.0
texture = ExtResource( 4 )
expand = true

[node name="Panel" type="Panel" parent="."]
margin_left = 136.0
margin_top = 136.0
margin_right = 896.0
margin_bottom = 504.0
theme = ExtResource( 2 )

[node name="btnNewGame" type="Button" parent="Panel"]
margin_left = 96.0
margin_top = 104.0
margin_right = 392.0
margin_bottom = 152.0
theme = ExtResource( 2 )
text = "NEW GAME"

[node name="btnQuit" type="Button" parent="Panel"]
margin_left = 96.0
margin_top = 264.0
margin_right = 392.0
margin_bottom = 312.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Exit"

[node name="imgOozle" type="TextureRect" parent="Panel"]
margin_left = 424.0
margin_top = 16.0
margin_right = 1004.0
margin_bottom = 707.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
flip_h = true

[node name="optDifficulty" type="OptionButton" parent="Panel"]
margin_left = 144.0
margin_top = 176.0
margin_right = 352.0
margin_bottom = 210.0
text = "Easy"
align = 1
items = [ "Easy", null, false, 0, null, "Medium", null, false, 1, null, "Hard", null, false, 2, null ]
selected = 0

[node name="lblTitle" type="Label" parent="Panel"]
margin_left = 80.0
margin_top = 24.0
margin_right = 414.0
margin_bottom = 84.0
custom_fonts/font = SubResource( 1 )
text = "Oozle Defense"

[connection signal="pressed" from="Panel/btnNewGame" to="." method="_on_btnNewGame_pressed"]
[connection signal="pressed" from="Panel/btnQuit" to="." method="_on_btnQuit_pressed"]
